[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QLightLamp"
version = "0.1.0"
description = "QLightLamp commander."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Brandon Beattie", email = "brandon.beattie@telosair.com" }
]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Visualization"
]


[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "hatchling"]


[tool.hatch.build.targets.wheel]
packages = ["QLightLamp"]

[tool.hatch.build.targets.sdist]
include = ["QLightLamp", "pyproject.toml"]